<resources>
    <string name="app_name">&appname;</string>
    <string name="server_error">Server Error</string>
    <string name="google_application_key">AIzaSyDWylt_HUZBnJJIHX6URlmjTbdK2mCdWPs</string>
    <string name="no_internet"> Internet Connection is not Available </string>
    <string name="font_default">Quicksand-Bold.otf</string>
    <string name="font_bold">Quicksand-Bold.otf</string>
    <string name="font_semi_bold">Quicksand-Bold.otf</string>
    <string name="font_light">Quicksand-Light.otf</string>
    <string name="font_semi_light">Quicksand-Light.otf</string>
    <string name="font_regular">Quicksand-Regular.otf</string>
    <string name="google_service_not_present">Google Service not Present</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="please_enter_customer_mobile_number">Please enter Customer mobile number</string>
    <string name="home">Home</string>
    <string name="login"> Login </string>
    <string name="signup"> Signup </string>
    <string name="cancel"> Cancel </string>
    <string name="name"> Name </string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="select_payment_method">Select Payment Method </string>
    <string name="get_otp">Get Otp</string>
    <string name="signup_for_account">Signup for an account</string>
    <string name="please_enter_address">Please enter Address</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="credit_debit_card">Credit/Debit Card</string>
    <string name="paytm">Paytm</string>
    <string name="full_name"> Full Name </string>
    <string name="first_name"> First Name </string>
    <string name="last_name"> Last Name </string>
    <string name="email"> Email </string>
    <string name="email_address"> Email Address </string>
    <string name="update">Update</string>
    <string name="update_password"> Update Password </string>
    <string name="no_data_found">No Data Found</string>
    <string name="search_city_product_service">Search City, Product, Service</string>
    <string name="choose_from_camera">Take Photo</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="change_location">Change Location</string>
    <string name="my_waranty">My Warranties</string>
    <string name="my_insurance">My Insurance</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="help">Help</string>
    <string name="chat">Chat</string>
    <string name="senior_citizen">Senior Citizen Helpline</string>
    <string name="term_condition">Terms and Conditions</string>
    <string name="logout">Logout</string>
    <string name="verify_account">Verify Account</string>
    <string name="please_enter_verification_code">Please enter the verification code we \nsent to your mobile number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="change_number">Change Number</string>
    <string name="otp_has_been_send">Otp has been send</string>
    <string name="ok">Ok</string>
    <string name="notification">Notifications</string>
    <string name="prefered_payment_option">Your Prefered Payment Option</string>
    <string name="user">User</string>
    <string name="submit">Submit</string>
    <string name="any_other_feedback">Any Other Feedback (Optional)</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user_signup_now">New User/Sign up now</string>
    <string name="register">Register</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="locate_me">Locate me</string>
    <string name="store_name">Store Name</string>
    <string name="enter_your_store_name">Enter your store name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="type_of_store">Type of store</string>
    <string name="store_photos">Store Photos</string>
    <string name="next">Next</string>
    <string name="please_enter_location">Please Enter Location</string>
    <string name="store_details">Store Details</string>
    <string name="legal_name_of_company">Legal Name Of Company</string>
    <string name="legal_name">Legal name</string>
    <string name="pan_card_number">Pan Card Number</string>
    <string name="enter_pan_number">Enter pan no</string>
    <string name="gst_number">GST NO.</string>
    <string name="enter_gst_number">enter GST no.</string>
    <string name="bank_setup">Bank Setup</string>
    <string name="bank_name">bank name</string>
    <string name="account_number">account no.</string>
    <string name="branch">branch</string>
    <string name="ifsc_code">ifsc code</string>
    <string name="payment_option">Payment Option</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="other">Other</string>
    <string name="shipping_delivery_charge">Shipping/Delivery Charge</string>
    <string name="rupees">Rupees</string>
    <string name="servicing_areas">Servicing Areas</string>
    <string name="add_more_areas">Add more areas</string>
    <string name="agreement_details_signup">Agreement Details &amp; Sign Up</string>
    <string name="agreement_status">Agreement Status</string>
    <string name="not_started">Not Started</string>
    <string name="done">Done</string>
    <string name="off_on">off valid till</string>
    <string name="fab_deal">Fab &amp; Deal</string>
    <string name="food_drinks">Food &amp; Drinks</string>
    <string name="spas">Spas</string>
    <string name="saloons">Saloons</string>
    <string name="offer">Offer</string>
    <string name="date">22\nmay</string>
    <string name="welcome">Welcome</string>
    <string name="my_inventory">My Inventory</string>
    <string name="view">View</string>
    <string name="quantity">Quantity</string>
    <string name="buy">Buy</string>
    <string name="auto_request">Auto Request</string>
    <string name="all_performance">All Performance</string>
    <string name="fill_details">Fill Details</string>
    <string name="delivery_boy_name">Delivery Boy Name</string>
    <string name="john_doe">John Doe</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_num">9999999999</string>
    <string name="please_enter_name">Please Enter Name</string>
    <string name="please_enter_date_of_birth">Please Enter Date Of Birth</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="not_confirm">Not Confirmed</string>
    <string name="assign_new_delivery_boy">Assign New Delivery Boy</string>
    <string name="performance_chart">Performance Chart</string>
    <string name="order_received">Order Received</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="order_out_for_delivery">Order Out for delivery</string>
    <string name="assign_delivery_boy">Assign Delivery Boy</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="order_canceled">Order Canceled</string>
    <string name="order_returned">Order Returned</string>
    <string name="order_assign_delivery_boy">Assign Delivery Boy</string>
    <string name="order_no">Order No.</string>
    <string name="received_time">Received Time</string>
    <string name="amount">Amount</string>
    <string name="status">Status</string>
    <string name="assign_to">Assign To</string>
    <string name="mode_of_payment">Mod of Payment</string>
    <string name="rating">Rating</string>
    <string name="promise_time">Promise Time</string>
    <string name="reason">Reason</string>
    <string name="delhi">Delhi</string>
    <string name="enter_your_full_address">Enter your full address</string>
    <string name="my_order">My Product</string>
    <string name="subscribe">Subscribe</string>
    <string name="sub_total">Sub Total :</string>
    <string name="please_add_data_in_cart_first">Cart is empty</string>
    <string name="text_checkout">CheckOut Now</string>
    <string name="you_can_not_add">You can not add more than 10 item in cart</string>
    <string name="checkout"> Checkout </string>
    <string name="est_delivery_time">Est Delivery Time</string>
    <string name="delivery">Delivery</string>
    <string name="pick_on_the_way">Pick On The Way</string>
    <string name="delivery_at">Delivery At</string>
    <string name="proced_to_pay">Proceed To Pay</string>
    <string name="edit_address">Edit Address</string>
    <string name="add_promo_code">Add Promo Code</string>
    <string name="shipping"> Shipping </string>
    <string name="discount"> Discount </string>
    <string name="subtotal"> Subtotal </string>
    <string name="total"> Total </string>
    <string name="coupon"> Coupon </string>
    <string name="coupon_code"> Coupon Code </string>
    <string name="coupon_amount"> Coupon Amount </string>
    <string name="coupon_type"> Coupon Type </string>
    <string name="sample_coupons"> Sample Coupon Codes </string>
    <string name="payment_method"> Payment Method </string>
    <string name="payment_details"> Payment Details </string>
    <string name="card_number"> Card Number </string>
    <string name="expiry_month"> Expiry Month </string>
    <string name="expiry_year"> Expiry Year </string>
    <string name="card_expiry"> Card Expiry </string>
    <string name="card_cvv"> Card CVV </string>
    <string name="payPal"> PayPal </string>
    <string name="billing_address"> Billing Address </string>
    <string name="shipping_address"> Shipping Address </string>
    <string name="shipping_method"> Shipping Method </string>
    <string name="shipping_charge">Shipping Charge</string>
    <string name="total_amount">Total Amount</string>
    <string name="tax"> Tax </string>
    <string name="home_delivery">Home Delivery</string>
    <string name="go">Go</string>
    <string name="select_address">Select Address</string>
    <string name="enter_new_address">Enter New Address</string>
    <string name="something_went_wrong"> Something went Wrong! </string>
    <string name="apply"> Apply </string>
    <string name="more_offers">More Offers</string>
    <string name="your_order_is_is_confirmed">Your Order is Confirmed</string>
    <string name="we_deliver_it_right">We Deliver it right</string>
    <string name="abc">abc@gmail.com</string>
    <string name="products">Products</string>
    <string name="services">Service</string>
    <string name="order_date">Order Date</string>
    <string name="enter_merchant_name">Enter Merchant Name</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_address">Customer Address</string>
    <string name="order_value">Order Value</string>
    <string name="payment_status">Payment Status</string>
    <string name="order_items">Order Items</string>
    <string name="select_delivery_boy">Select Delivery Boy</string>
    <string name="order_status">Order Status</string>
    <string name="feedback">Feedback</string>
    <string name="comment">Comments</string>
    <string name="go_back">Go Back</string>
</resources>